<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MapsActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_FollowUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            map:layout_constraintStart_toStartOf="parent"
            map:layout_constraintTop_toTopOf="parent"
            android:text="@string/follow_btn_text"
            map:icon="@drawable/ic_twotone_visibility_24"
            android:onClick="showFollowMenu"/>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            map:cardCornerRadius="100dp"
            map:cardElevation="20dp"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/default_speed"
                    android:textColor="@color/black"
                    android:textSize="21sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/default_speed_unit"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:onClick="emergencyCallClicked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/ic_baseline_notification_important_48"
            app:backgroundTint="@color/white"
            app:tint="@color/pink_500"
            app:rippleColor="@color/pink_500"
            map:layout_constraintEnd_toEndOf="parent"
            map:layout_constraintTop_toBottomOf="@+id/materialCardView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- Adding bottom sheet after main content -->
    <include layout="@layout/map_bottom_sheet" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:onClick="moveToMyLocationClicked"
        android:id="@+id/fab_MyLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/white"
        android:layout_marginEnd="8dp"
        app:tint="@color/teal_200"
        android:src="@drawable/ic_baseline_my_location_24"
        app:rippleColor="@color/teal_200"
        app:layout_anchor="@id/txt"
        app:layout_anchorGravity="top|end"
        android:contentDescription="@string/my_location_description"
        android:visibility="invisible"/>

    <TextView
    android:id="@+id/txt"
    android:layout_width="50dp"
    android:layout_height="70dp"
    app:layout_anchor="@+id/fab_Direction"
    app:layout_anchorGravity="top|end" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:onClick="findDirectionClicked"
        android:id="@+id/fab_Direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/white"
        android:layout_marginEnd="8dp"
        app:tint="@color/pink_500"
        app:rippleColor="@color/pink_500"
        android:src="@drawable/ic_baseline_directions_24"

        app:layout_anchor="@id/bottom_sheet"
        app:layout_anchorGravity="top|end"
        android:visibility="invisible"
        android:contentDescription="@string/find_the_direction_description" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
