<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".loginslider.SecondFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_wave__1_"
        android:scaleType="fitStart"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_wave"
        android:scaleType="fitEnd"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imageView_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/default_profile_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:civ_border_color="@color/pink_200"
            app:civ_border_width="2dp"/>

        <TextView
            android:id="@+id/textView_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView_profile_picture" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_name">

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/nickname_hint"
                app:startIconDrawable="@drawable/ic_baseline_sentiment_very_satisfied_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/phone_number_hint"
                app:startIconDrawable="@drawable/ic_baseline_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInput_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_Fb_Id"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:hint="@string/fb_id_hint"
                    app:startIconDrawable="@drawable/ic_baseline_facebook_24"
                    android:layout_marginTop="15dp"
                    app:endIconDrawable="@drawable/ic_baseline_vpn_key_24"
                    app:endIconMode="custom"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInput_FB_Id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        />

                </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>




            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_submit"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:src="@drawable/ic_baseline_check_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:enabled="false">

            </com.google.android.material.floatingactionbutton.FloatingActionButton>

    </androidx.constraintlayout.widget.ConstraintLayout>



</FrameLayout>